--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,13 +1,13 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+#root {
+  width: 600px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 body {
@@ -43,73 +43,28 @@ button {
   justify-content: center;
 }
 
-textarea {
-  background-color: var(--input);
-  width: 100%;
-  resize: vertical;
-  min-height: 250px;
-  border: 2px solid var(--secondary);
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 14px;
-}
-
 p {
   color: var(--muted-foreground);
 }
 
-label div {
-  border: 2px dashed var(--secondary);
-  border-radius: 5px;
-  padding: 50px 20px;
+.rounded { border-radius: 5px; }
+.rounded-large { border-radius: 10px; }
+
+.flex-center {
+  display: inline-flex;
+  place-items: center;
+  justify-content: center;
 }
 
-.file-type-button:hover{
-  color: var(--foreground)
-}
+.inline { display : inline; }
+.block { display : block; }
+.left-content { text-align: left; }
 
-.file-type-button.selected {
-  color: var(--foreground);
-  background-color: var(--primary);
-}
+.color-muted { color: var(--muted-foreground); }
+.color-primary { color: var(--primary); }
+.color-alert { color: var(--alert); }
 
-.upload-button {
-  padding: 10px 10px;
-}
+.bg-primary { background-color: var(--primary); }
+.bg-input { background-color: var(--input); }
 
-.classify-button {
-  color: var(--foreground);
-  background-color: var(--primary);
-  width: 100%;
-  margin-top: 20px;
-}
-
-.content-div {
-  background-color: #3a3847;
-  text-align: left
-}
-
-.icon {
-  margin-right: 5px;
-}
-
-#file-button {
-  border-top-left-radius: 4px;
-}
-
-#input-type-div {
-  background-color: oklch(0.269 0 0);
-  border-radius: 5px;
-  width: 100wh;
-  margin: 20px auto;
-  padding: 4px;
-}
-
-#classify-div {
-  background-color: #3e4145;
-  border-radius: 0px 0px 5px 5px;
-}
-
-#classify-div:hover {
-  background-color: #566168;
-}
+.icon {margin-right: 5px;}
